--- a/package.json
+++ b/package.json
@@ -18,33 +18,21 @@
   "homepage": "https://github.com/BibCnrs/EBSCO-widget",
   "devDependencies": {
     "babel": "5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
+    "babel-core": "5.8.25",
+    "babel-loader": "5.3.2",
     "eslint": "1.6.0",
     "eslint-plugin-react": "3.5.1",
-    "jquery": "2.1.4",
     "karma": "0.13.10",
-    "koa": "1.0.0",
-    "koa-body": "1.3.0",
-    "koa-mount": "1.3.0",
-    "koa-parse-json": "1.0.1",
-    "koa-route": "2.4.2",
-    "koa-static": "1.4.9",
     "mocha": "2.3.3",
     "redux-devtools": "2.1.5",
     "webpack": "1.12.2",
-    "whatwg-fetch": "0.9.0"
+    "webpack-dev-server": "1.12.0"
   },
   "dependencies": {
     "config": "1.16.0",
-    "fetch": "0.3.6",
-    "isomorphic-fetch": "^2.1.1",
-    "koa-cors": "0.0.16",
-    "promisify": "0.0.3",
+    "isomorphic-fetch": "2.1.1",
     "react": "0.13.3",
     "react-redux": "3.1.0",
-    "redux": "3.0.2",
-    "redux-thunk": "^1.0.0",
-    "request": "2.64.0"
+    "redux": "3.0.2"
   }
 }
