--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
     "babel": "5.8.23",
     "babel-core": "5.8.25",
     "babel-loader": "5.3.2",
+    "css-loader": "0.20.2",
     "eslint": "1.6.0",
     "eslint-plugin-react": "3.5.1",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "html-webpack-plugin": "^1.6.2",
     "karma": "0.13.10",
     "mocha": "2.3.3",
+    "node-sass": "^3.3.3",
     "redux-devtools": "2.1.5",
+    "sass-loader": "3.0.0",
+    "style-loader": "0.13.0",
     "webpack": "1.12.2",
     "webpack-dev-server": "1.12.0"
   },
