--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "1.6.0",
     "eslint-plugin-react": "3.5.1",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.2",
     "karma": "0.13.10",
     "mocha": "2.3.3",
@@ -31,6 +32,7 @@
     "redux-devtools": "2.1.5",
     "sass-loader": "3.0.0",
     "style-loader": "0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "1.12.2",
     "webpack-dev-server": "1.12.0"
   },
@@ -39,6 +41,7 @@
     "config": "1.16.0",
     "isomorphic-fetch": "2.1.1",
     "react": "0.13.3",
+    "react-fa": "^4.0.0",
     "react-redux": "3.1.0",
     "redux": "3.0.2"
   }
