--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "babel": "5.8.23",
     "babel-core": "5.8.25",
     "babel-loader": "5.3.2",
+    "chai": "^3.4.0",
     "css-loader": "0.20.2",
     "eslint": "1.6.0",
     "eslint-plugin-react": "3.5.1",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.2",
-    "karma": "0.13.10",
     "mocha": "2.3.3",
     "node-sass": "^3.3.3",
     "redux-devtools": "2.1.5",
