--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   "dependencies": {
     "compass-mixins": "^0.12.7",
     "config": "1.16.0",
+    "immutable": "^3.7.5",
     "isomorphic-fetch": "2.1.1",
     "react": "0.13.3",
     "react-fa": "^4.0.0",
+    "react-immutable-proptypes": "^1.2.3",
     "react-redux": "3.1.0",
     "redux": "3.0.2"
   }
