--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "config": "1.16.0",
     "immutable": "^3.7.5",
     "isomorphic-fetch": "2.1.1",
-    "react": "0.13.3",
+    "react": "0.14.2",
+    "react-dom": "0.14.2",
     "react-fa": "^4.0.0",
     "react-immutable-proptypes": "^1.2.3",
+    "react-modal": "0.6.1",
     "react-redux": "3.1.0",
-    "redux": "3.0.2"
+    "redux": "3.0.4"
   }
 }
