--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.2",
+    "jsdom": "7.0.2",
     "mocha": "2.3.3",
     "node-sass": "^3.3.3",
     "redux-devtools": "2.1.5",
