--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-immutable-proptypes": "^1.2.3",
     "react-modal": "0.6.1",
     "react-redux": "3.1.0",
-    "redux": "3.0.4"
+    "redux": "3.0.4",
+    "rc-slider": "3.1.0"
   }
 }
