add fullText limiter

--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "react-modal": "0.6.1",
     "react-redux": "3.1.0",
     "redux": "3.0.4",
+    "rc-calendar": "4.0.0",
+    "rc-checkbox": "1.2.0",
     "rc-slider": "3.1.0"
   }
 }
