add container for FullTextLimiter

--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
     "babel": "5.8.23",
     "babel-core": "5.8.25",
     "babel-loader": "5.3.2",
-    "chai": "^3.4.0",
+    "chai": "3.4.0",
     "css-loader": "0.20.2",
     "eslint": "1.6.0",
     "eslint-plugin-react": "3.5.1",
-    "extract-text-webpack-plugin": "^0.8.2",
+    "extract-text-webpack-plugin": "0.8.2",
     "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^1.6.2",
+    "html-webpack-plugin": "1.6.2",
     "jsdom": "7.0.2",
     "mocha": "2.3.3",
     "node-sass": "^3.3.3",
     "redux-devtools": "2.1.5",
     "sass-loader": "3.0.0",
     "style-loader": "0.13.0",
-    "url-loader": "^0.5.6",
+    "url-loader": "0.5.6",
     "webpack": "1.12.2",
     "webpack-dev-server": "1.12.0"
   },
   "dependencies": {
-    "compass-mixins": "^0.12.7",
+    "compass-mixins": "0.12.7",
     "config": "1.16.0",
     "es5-shim": "4.3.1",
     "immutable": "^3.7.5",
@@ -46,9 +46,9 @@
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "react-fa": "^4.0.0",
-    "react-immutable-proptypes": "^1.2.3",
+    "react-immutable-proptypes": "1.2.3",
     "react-modal": "0.6.1",
-    "react-redux": "3.1.0",
+    "react-redux": "4.0.0",
     "redux": "3.0.4",
     "rc-calendar": "4.0.0",
     "rc-checkbox": "1.2.0",
