--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-immutable-proptypes": "1.2.3",
     "react-modal": "0.6.1",
     "react-redux": "4.0.0",
+    "react-sidebar": "2.0.0",
     "redux": "3.0.4",
     "react-input-calendar": "0.1.19",
     "rc-checkbox": "1.2.0",
