fix env http_proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ install:
     file: ./docker-compose.yml
     service: node
   environment:
-    http_proxy: http://proxyout.inist.fr:8080
+    http_proxy: ${http_proxy}
   command: npm install
 
 mock:
