--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebsco-widget",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "url": "https://github.com/BibCnrs/EBSCO-widget/issues"
   },
   "scripts": {
-    "install": "make build"
+    "prepublish": "make build"
   },
   "homepage": "https://github.com/BibCnrs/EBSCO-widget",
   "devDependencies": {
