--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "make build",
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -15,10 +16,6 @@
   "bugs": {
     "url": "https://github.com/BibCnrs/EBSCO-widget/issues"
   },
-  "scripts": {
-    "prepublish": "make build",
-    "test": "make test"
-  },
   "homepage": "https://github.com/BibCnrs/EBSCO-widget",
   "devDependencies": {
     "babel": "5.8.23",
@@ -26,6 +23,7 @@
     "babel-loader": "5.3.2",
     "chai": "3.4.0",
     "css-loader": "0.20.2",
+    "enzyme": "^1.1.0",
     "eslint": "1.6.0",
     "eslint-plugin-react": "3.5.1",
     "extract-text-webpack-plugin": "0.8.2",
