--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/BibCnrs/EBSCO-widget",
   "devDependencies": {
-    "babel": "5.8.23",
-    "babel-core": "5.8.25",
-    "babel-loader": "5.3.2",
+    "babel-core": "6.3.13",
+    "babel-loader": "6.2.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
     "chai": "3.4.0",
     "css-loader": "0.20.2",
     "enzyme": "^1.1.0",
