--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "jsdom": "7.0.2",
     "mocha": "2.3.3",
     "node-sass": "^3.3.3",
+    "react": "^0.14.3",
+    "react-addons-test-utils": "^0.14.3",
     "redux-devtools": "2.1.5",
     "sass-loader": "3.0.0",
     "style-loader": "0.13.0",
@@ -48,8 +50,8 @@
     "es5-shim": "4.3.1",
     "immutable": "^3.7.5",
     "isomorphic-fetch": "2.1.1",
-    "react": "0.14.2",
-    "react-dom": "0.14.2",
+    "react": "0.14.3",
+    "react-dom": "0.14.3",
     "react-fa": "^4.0.0",
     "react-immutable-proptypes": "1.2.3",
     "react-modal": "0.6.1",
