--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "0.14.3",
     "react-dom": "0.14.3",
     "react-fa": "4.0.0",
+    "react-input-autosize": "^0.6.6",
     "react-input-calendar": "0.1.19",
     "react-modal": "0.6.1",
     "react-redux": "4.0.0",
