--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "react-input-calendar": "0.1.19",
     "react-modal": "0.6.1",
     "react-redux": "4.0.0",
+    "react-router": "2.0.0",
+    "react-router-redux": "3.0.0",
     "react-select": "1.0.0-beta8",
     "react-sidebar": "2.0.0",
     "redux": "3.0.4",
