--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
     "react-modal": "0.6.1",
     "react-redux": "4.0.0",
     "react-router": "2.0.0",
+    "react-router-bootstrap": "0.20.1",
     "react-router-redux": "3.0.0",
     "react-select": "1.0.0-beta8",
-    "react-sidebar": "2.0.0",
     "redux": "3.0.4",
     "redux-localstorage": "1.0.0-rc4",
     "redux-localstorage-debounce": "^0.1.0"
