add fieldSelector Selector with reselect

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-select": "1.0.0-beta8",
     "redux": "3.0.4",
     "redux-localstorage": "1.0.0-rc4",
-    "redux-localstorage-debounce": "^0.1.0"
+    "redux-localstorage-debounce": "0.1.0",
+    "reselect": "2.0.3"
   }
 }
