--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-2": "6.3.13",
     "babel-runtime": "6.3.13",
     "chai": "3.4.0",
+    "co-body": "^4.0.0",
     "css-loader": "0.20.2",
     "enzyme": "1.1.0",
     "eslint": "1.6.0",
@@ -34,6 +35,9 @@
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "1.6.2",
     "jsdom": "7.0.2",
+    "koa": "^1.2.0",
+    "koa-cors": "0.0.16",
+    "koa-route": "^2.4.2",
     "mocha": "2.3.3",
     "node-sass": "3.3.3",
     "react-addons-test-utils": "0.14.3",
