add action in test to be able to set state

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -1,7 +1,7 @@
 app:
   extends:
     file: ./docker-compose.yml
-    service: devserver
+    service: node
   environment:
     server_url: 'http://server'
   links:
