--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-2": "6.3.13",
+    "babel-register": "6.6.5",
     "babel-runtime": "6.3.13",
     "chai": "3.4.0",
     "co-body": "^4.0.0",
     "css-loader": "0.20.2",
     "enzyme": "1.1.0",
     "eslint": "1.6.0",
-    "eslint-plugin-react": "3.5.1",
+    "eslint-plugin-react": "4.2.1",
     "extract-text-webpack-plugin": "0.8.2",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "1.6.2",
