--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "koa-cors": "0.0.16",
     "koa-route": "^2.4.2",
     "mocha": "2.3.3",
+    "nightwatch": "^0.8.18",
     "node-sass": "3.3.3",
     "react-addons-test-utils": "0.14.3",
     "redux-devtools": "3.0.0",
