--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "rc-checkbox": "1.2.0",
     "rc-slider": "3.1.0",
     "react": "0.14.3",
+    "react-addons-css-transition-group": "0.14.3",
     "react-bootstrap": "0.28.3",
     "react-dom": "0.14.3",
     "react-fa": "4.0.0",
