refactor e2e logion test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ devserver:
     file: ./docker-compose.yml
     service: node
   environment:
-    server_url: http://localhost:3000/ebsco
+    server_url: https://bib-preprod.cnrs.fr/api/ebsco
   ports:
     - 3001:3001
   command: node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.dev.js --port 3001 --host 0.0.0.0
