--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "lodash": "^4.7.0",
     "query-string": "^4.1.0",
     "rc-slider": "3.1.0",
-    "react-bootstrap": "0.28.3",
     "react": "0.14.3",
     "react-addons-css-transition-group": "0.14.3",
+    "react-bootstrap": "0.28.3",
     "react-dom": "0.14.3",
     "react-fa": "4.0.0",
     "react-input-autosize": "0.6.8",
@@ -74,6 +74,7 @@
     "redux": "3.0.4",
     "redux-localstorage": "1.0.0-rc4",
     "redux-localstorage-debounce": "0.1.0",
+    "redux-thunk": "^2.1.0",
     "reselect": "2.0.3"
   }
 }
