--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux-devtools": "3.0.0",
     "redux-devtools-dock-monitor": "1.0.1",
     "redux-devtools-log-monitor": "1.0.1",
+    "resolve-url-loader": "1.6.0",
     "sass-loader": "3.0.0",
     "style-loader": "0.13.0",
     "url-loader": "0.5.6",
