fix widget props value

--- a/docker-compose.serve.yml
+++ b/docker-compose.serve.yml
@@ -4,7 +4,7 @@ server:
     - ./build:/public
     - ./node_modules:/public/node_modules
   environment:
-    server_url: https://bib-preprod.cnrs.fr/api/ebsco
+    server_url: http://localhost:3000/ebsco
   working_dir: /public
   ports:
     - 3002:8080
