--- a/package.json
+++ b/package.json
@@ -18,63 +18,63 @@
   },
   "homepage": "https://github.com/BibCnrs/EBSCO-widget",
   "devDependencies": {
-    "babel-core": "6.3.13",
-    "babel-loader": "6.2.0",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-stage-2": "6.3.13",
-    "babel-register": "6.6.5",
-    "babel-runtime": "6.3.13",
-    "chai": "3.4.0",
-    "co-body": "^4.0.0",
-    "css-loader": "0.20.2",
-    "enzyme": "1.1.0",
-    "eslint": "2.13.0",
-    "eslint-plugin-react": "5.2.2",
-    "extract-text-webpack-plugin": "0.8.2",
-    "file-loader": "^0.8.4",
-    "html-webpack-plugin": "1.6.2",
-    "jsdom": "7.0.2",
-    "koa": "1.2.0",
+    "babel-core": "6.17.0",
+    "babel-loader": "6.2.5",
+    "babel-preset-es2015": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-2": "6.17.0",
+    "babel-register": "6.16.3",
+    "babel-runtime": "6.11.6",
+    "chai": "3.5.0",
+    "co-body": "4.2.0",
+    "css-loader": "0.25.0",
+    "enzyme": "2.4.1",
+    "eslint": "3.7.1",
+    "eslint-plugin-react": "6.4.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "2.22.0",
+    "jsdom": "9.6.0",
+    "koa": "1.2.4",
     "koa-cors": "0.0.16",
     "koa-route": "2.4.2",
-    "mocha": "2.3.3",
-    "nightwatch": "0.8.18",
-    "node-sass": "3.3.3",
-    "react-addons-test-utils": "0.14.3",
-    "redux-devtools": "3.0.0",
-    "redux-devtools-dock-monitor": "1.0.1",
-    "redux-devtools-log-monitor": "1.0.1",
+    "mocha": "3.1.0",
+    "nightwatch": "0.9.8",
+    "node-sass": "3.10.1",
+    "react-addons-test-utils": "15.3.2",
+    "redux-devtools": "3.3.1",
+    "redux-devtools-dock-monitor": "1.1.1",
+    "redux-devtools-log-monitor": "1.0.11",
     "resolve-url-loader": "1.6.0",
-    "sass-loader": "3.0.0",
-    "style-loader": "0.13.0",
-    "url-loader": "0.5.6",
-    "webpack": "1.12.2",
-    "webpack-dev-server": "1.12.0"
+    "sass-loader": "4.0.2",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.2",
+    "webpack-dev-server": "1.16.2"
   },
   "dependencies": {
-    "babel-polyfill": "6.3.14",
-    "bootstrap": "3.3.6",
-    "compass-mixins": "0.12.7",
-    "config": "1.16.0",
-    "es5-shim": "4.3.1",
-    "isomorphic-fetch": "2.1.1",
-    "lodash": "^4.7.0",
-    "query-string": "^4.1.0",
-    "react": "0.14.3",
-    "react-addons-css-transition-group": "0.14.3",
-    "react-bootstrap": "0.30.2",
-    "react-dom": "0.14.3",
-    "react-fa": "4.0.0",
-    "react-input-autosize": "0.6.8",
-    "react-input-calendar": "0.1.19",
-    "react-modal": "0.6.1",
-    "react-redux": "4.3.0",
-    "react-select": "1.0.0-beta8",
-    "redux": "3.0.4",
+    "babel-polyfill": "6.16.0",
+    "bootstrap": "3.3.7",
+    "compass-mixins": "0.12.10",
+    "config": "1.21.0",
+    "es5-shim": "4.5.9",
+    "isomorphic-fetch": "2.2.1",
+    "lodash": "4.16.4",
+    "query-string": "4.2.3",
+    "react": "15.3.2",
+    "react-addons-css-transition-group": "15.3.2",
+    "react-bootstrap": "0.30.5",
+    "react-dom": "15.3.2",
+    "react-fa": "4.1.2",
+    "react-input-autosize": "1.1.0",
+    "react-input-calendar": "0.3.14",
+    "react-modal": "1.5.2",
+    "react-redux": "4.4.5",
+    "react-select": "1.0.0-rc.2",
+    "redux": "3.6.0",
     "redux-localstorage": "1.0.0-rc4",
     "redux-localstorage-debounce": "0.1.0",
-    "redux-saga": "0.10.5",
-    "reselect": "2.0.3"
+    "redux-saga": "0.12.0",
+    "reselect": "2.5.4"
   }
 }
