--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sass-loader": "4.0.2",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
+    "url-search-params-polyfill": "1.0.2",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2"
   },
