upgrade react to 16 applying code mod and deactivating broken css transition for now

--- a/package.json
+++ b/package.json
@@ -61,16 +61,16 @@
     "es5-shim": "4.5.9",
     "isomorphic-fetch": "2.2.1",
     "lodash": "4.16.4",
+    "prop-types": "15.6.0",
     "query-string": "4.2.3",
-    "react": "15.3.2",
-    "react-addons-css-transition-group": "15.3.2",
-    "react-bootstrap": "0.30.5",
-    "react-dom": "15.3.2",
-    "react-fa": "4.1.2",
+    "react": "16.2.0",
+    "react-bootstrap": "0.32.1",
+    "react-dom": "16.2.0",
+    "react-fa": "5.0.0",
     "react-input-autosize": "1.1.0",
     "react-input-calendar": "0.3.14",
     "react-modal": "1.5.2",
-    "react-redux": "4.4.5",
+    "react-redux": "5.0.6",
     "react-select": "1.0.0-rc.2",
     "redux": "3.6.0",
     "redux-localstorage": "1.0.0-rc4",
