--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "chai": "3.5.0",
     "co-body": "4.2.0",
     "css-loader": "0.25.0",
-    "enzyme": "2.4.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "eslint": "3.7.1",
     "eslint-plugin-react": "6.4.0",
     "extract-text-webpack-plugin": "1.0.1",
