--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "config": "1.21.0",
     "es5-shim": "4.5.9",
     "isomorphic-fetch": "2.2.1",
+    "katex": "0.9.0-beta1",
     "lodash": "4.16.4",
     "prop-types": "15.6.0",
     "query-string": "4.2.3",
