--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,11 @@
 sudo: required
 services:
   - docker
-env:
-  DOCKER_COMPOSE_VERSION: 1.6.2
-before_install:
-  # docker-compose upgrade
-  - sudo rm -f /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
 language: node_js
 node_js:
-  - "4.1"
+  - "8.9.1"
+install:
+    - "make install"
 script:
   - make test
 cache:
