--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "bootstrap": "3.3.7",
+    "classnames": "2.2.5",
     "compass-mixins": "0.12.10",
     "config": "1.21.0",
     "es5-shim": "4.5.9",
