--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-stage-2": "6.17.0",
     "babel-register": "6.16.3",
     "babel-runtime": "6.11.6",
+    "babel-env": "2.4.1",
     "chai": "3.5.0",
     "co-body": "4.2.0",
     "css-loader": "0.25.0",
