--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "isomorphic-fetch": "2.2.1",
     "katex": "0.9.0-beta1",
     "lodash": "4.16.4",
+    "lodash.memoize": "4.1.2",
     "prop-types": "15.6.0",
     "query-string": "4.2.3",
     "react": "16.2.0",
