--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebsco-widget",
-  "version": "1.4.3",
+  "version": "2.0.0-prod",
   "description": "",
   "main": "index.js",
   "scripts": {
