--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "babel-eslint": "8.2.1",
     "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.16.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-2": "6.17.0",
     "babel-register": "6.16.3",
     "babel-runtime": "6.11.6",
-    "babel-env": "2.4.1",
     "chai": "3.5.0",
     "co-body": "4.2.0",
     "css-loader": "0.25.0",
