--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-modal": "1.5.2",
     "react-redux": "5.0.6",
     "react-select": "1.0.0-rc.2",
+    "react-sortable-hoc": "0.6.8",
     "react-transition-group": "1.2.1",
     "recompose": "0.26.0",
     "redux": "3.6.0",
