add https proxy for npm

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ npm:
     service: node
   environment:
     http_proxy: ${http_proxy}
+    https_proxy: ${http_proxy}
   entrypoint: ['npm']
 
 devserver:
