--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebsco-widget",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,7 @@
     "config": "1.21.0",
     "es5-shim": "4.5.13",
     "isomorphic-fetch": "2.2.1",
-    "katex": "0.9.0-beta1",
+    "katex": "0.9.0",
     "lodash": "4.17.15",
     "lodash.memoize": "4.1.2",
     "lodash.pick": "4.4.0",
@@ -34,26 +34,26 @@
     "query-string": "4.2.3",
     "react": "16.2.0",
     "react-bootstrap": "0.33.1",
-    "react-dom": "16.2.0",
+    "react-dom": "16.2.1",
     "react-fa": "5.0.0",
-    "react-input-autosize": "1.1.0",
-    "react-input-calendar": "0.3.14",
+    "react-input-autosize": "1.1.5",
+    "react-input-calendar": "0.3.15",
     "react-modal": "1.5.2",
-    "react-redux": "5.0.6",
-    "react-select": "1.0.0-rc.2",
+    "react-redux": "5.0.7",
+    "react-select": "1.0.1",
     "react-sortable-hoc": "0.6.8",
     "react-transition-group": "1.2.1",
     "recompose": "0.26.0",
     "redux": "3.6.0",
-    "redux-localstorage": "1.0.0-rc4",
+    "redux-localstorage": "1.0.0-rc5",
     "redux-localstorage-debounce": "0.1.0",
-    "redux-saga": "0.12.0",
+    "redux-saga": "0.12.1",
     "reselect": "2.5.4"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
-    "babel-eslint": "8.2.1",
-    "babel-loader": "6.2.5",
+    "babel-eslint": "8.2.6",
+    "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
@@ -78,10 +78,10 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "2.22.0",
     "jsdom": "9.6.0",
-    "koa": "1.2.4",
+    "koa": "1.2.5",
     "koa-cors": "0.0.16",
     "koa-route": "2.4.2",
-    "mocha": "3.1.0",
+    "mocha": "3.1.2",
     "nightwatch": "0.9.21",
     "node-sass": "4.13.1",
     "prettier": "1.19.1",
@@ -90,10 +90,10 @@
     "redux-devtools": "3.5.0",
     "redux-devtools-dock-monitor": "1.1.3",
     "redux-devtools-log-monitor": "1.0.11",
-    "resolve-url-loader": "1.6.0",
+    "resolve-url-loader": "1.6.1",
     "sass-loader": "4.0.2",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
+    "style-loader": "0.13.2",
+    "url-loader": "0.5.9",
     "url-search-params-polyfill": "1.0.2",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2"
