update dependencies and mocha

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -42,4 +42,4 @@ test:
   environment:
     NODE_ENV: test
     server_url: http://server
-  command: node_modules/mocha/bin/mocha --config test/e2e/mocha.opts test/e2e test/e2e/test/*.js
+  command: node_modules/mocha/bin/mocha test/e2e test/e2e/test/*.js
