--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "katex": "0.9.0",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
-    "react": "16.13.1",
+    "react": "17.0.1",
     "react-bootstrap": "0.33.1",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.1",
     "react-fa": "5.0.0",
     "react-redux": "5.0.7",
     "react-select": "1.0.1",
@@ -57,7 +57,7 @@
     "co-body": "4.2.0",
     "css-loader": "0.25.0",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.20.2",
@@ -76,7 +76,7 @@
     "koa-route": "2.4.2",
     "mocha": "7.1.2",
     "nightwatch": "0.9.21",
-    "node-sass": "4.14.1",
+    "node-sass": "7.0.0",
     "prettier": "1.19.1",
     "pre-commit": "1.2.2",
     "react-addons-test-utils": "15.6.2",
