--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -1,45 +1,39 @@
-app:
-  extends:
-    file: ./docker-compose.yml
-    service: node
-  environment:
-    server_url: 'http://server'
-  links:
-    - server
-  command: node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.test.js --port 80 --host 0.0.0.0
+version: "3.8"
 
-server:
-  extends:
-    file: ./docker-compose.yml
-    service: node
-  command: node mock/launcher.js
+services:
+  app:
+    image: node:16-alpine
+    volumes:
+      - .:/app
+    working_dir: /app
+    environment:
+      server_url: 'http://server'
+    command: node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.test.js --port 80 --host 0.0.0.0
 
-hub:
-  image: selenium/hub:2.53.0
+  server:
+    image: node:16-alpine
+    volumes:
+        - .:/app
+    working_dir: /app
+    command: node mock/launcher.js
 
-chrome:
-  image: selenium/node-chrome:2.53.0
-  links:
-    - hub
-    - app
-    - server
+  hub:
+    image: selenium/hub:2.53.0
 
-chromedebug:
-  image: selenium/node-chrome-debug:2.53.0
-  links:
-    - hub
-    - app
-    - server
-  ports:
-    - 5900:5900
+  chrome:
+    image: selenium/node-chrome:2.53.0
 
-test:
-  extends:
-    file: ./docker-compose.yml
-    service: node
-  links:
-    - hub
-  environment:
-    NODE_ENV: test
-    server_url: http://server
-  command: node_modules/mocha/bin/mocha test/e2e test/e2e/test/*.js
+  chromedebug:
+    image: selenium/node-chrome-debug:2.53.0
+    ports:
+      - 5900:5900
+
+  test:
+    image: node:16-alpine
+    volumes:
+      - .:/app
+    working_dir: /app
+    environment:
+      NODE_ENV: test
+      server_url: http://server
+    command: node_modules/mocha/bin/mocha test/e2e test/e2e/test/*.js
