--- a/docker-compose.serve.yml
+++ b/docker-compose.serve.yml
@@ -1,10 +1,13 @@
-server:
-  image: cannin/nodejs-http-server
-  volumes:
-    - ./build:/public
-    - ./node_modules:/public/node_modules
-  environment:
-    server_url: http://localhost:3000/ebsco
-  working_dir: /public
-  ports:
-    - 3002:8080
+version: '3.5'
+
+services:
+    server:
+        image: cannin/nodejs-http-server
+        volumes:
+            - ./build:/public
+            - ./node_modules:/public/node_modules
+        environment:
+            server_url: http://localhost:3000/ebsco
+        working_dir: /public
+        ports:
+            - 3002:8080
