--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prepublishOnly": "make build",
     "test": "make test",
-    "lint": "./pre-commit"
+    "lint": "./pre-commit",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -44,11 +45,13 @@
     "reselect": "2.5.4"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
     "babel-core": "6.26.3",
     "babel-eslint": "10.0.3",
     "babel-loader": "6.4.1",
-    "babel-preset-es2015": "6.24.1",
     "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.26.0",
@@ -56,12 +59,12 @@
     "chai": "3.5.0",
     "co-body": "4.2.0",
     "css-loader": "0.25.0",
+    "cypress": "^10.11.0",
     "enzyme": "3.11.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.20.2",
     "eslint-import-resolver-node": "0.3.2",
+    "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-mocha": "6.3.0",
     "eslint-plugin-mocha-no-only": "1.1.0",
@@ -77,8 +80,8 @@
     "mocha": "7.1.2",
     "nightwatch": "0.9.21",
     "node-sass": "7.0.0",
-    "prettier": "1.19.1",
     "pre-commit": "1.2.2",
+    "prettier": "1.19.1",
     "react-addons-test-utils": "15.6.2",
     "redux-devtools": "3.5.0",
     "redux-devtools-dock-monitor": "1.1.3",
