Feat: migrate tests for articleSearch and articleSearchResult

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -9,7 +9,7 @@ services:
         ports:
             - 3001:3001
         environment:
-            server_url: http://localhost:3000
+            server_url: http://server:3000
         command: node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.test.js --port 3001 --host 0.0.0.0
 
     server:
