--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-import-resolver-node": "0.3.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-mocha": "6.3.0",
