--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
         volumes:
             - .:/app
         working_dir: /app
+        user: ${UID}:${GID}
         environment:
             http_proxy: ${http_proxy}
             https_proxy: ${https_proxy}
