--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         environment:
             http_proxy: ${http_proxy}
             https_proxy: ${https_proxy}
+            HOME: /tmp
         entrypoint: ['npm']
 
     devserver:
