--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
 name: 🚀 Checks
 on:
-  [push, pull_request]
+  push:
+    branches:
+      - master
+  pull_request: {}
 permissions:
   checks: write
   actions: write
